fix: horizontal scroll

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -20,9 +20,11 @@ body
   font-family: var(--font)
   font-size: .6rem
   height: calc(100vh - 50px)
+  transition: color 1s linear
 
 #svg-container
-  width: 100vw
+  width: 75vw
+  transition: color 1s linear
 
 .inner-container
   position:relative
